@@ -87,7 +87,27 @@ public class BoardImpl implements Board {
 
     @Override
     public Set<Field> getHomeFieldsForPlayer(int i) {
+        if (i == 0) {
+            return Set.of( new Field(0, baseSize* 3));
+        }
+        else if (i == 1) {
+            return Set.of( new Field(baseSize * 3, 0));
+        }
+        else if (i == 2){
+            return Set.of( new Field(baseSize * 3, baseSize * 6));
+        }
+        else if (i == 3) {
+            return Set.of( new Field(baseSize * 4, baseSize * 3));
+        }
+        else  if (i == 4) {
+            return Set.of( new Field(baseSize, baseSize * 6));
+        }
+        else  if (i == 5) {
+            return Set.of( new Field(0, baseSize));
+        }
+
         return Set.of();
+
     }
 
 
@@ -198,27 +218,109 @@ public class BoardImpl implements Board {
     }
 
     @Override
-    public Set<Field> getTargetFieldsForPlayer(int i) {
+    public Set<Field> getTargetFieldsForPlayer(int index) {
         //TODO
-        if (i == 0) {
+        int xStartingPos;
+        int yStartingPos;
+        int nbFields;
+
+        if (index == 0) {
+            //Case target fields à droite
+
+            xStartingPos = baseSize;
+            yStartingPos = 0;
+            nbFields = (6 * baseSize) + 1;
+
+            while (xStartingPos <= baseSize * 4) {
+                for (int i = 0; i <= nbFields; i+=2) {
+                    if (xStartingPos + baseSize > baseSize * 4) {
+                        targetFields.add(new Field(xStartingPos, i + yStartingPos));
+                    }
+                }
+                xStartingPos++;
+                yStartingPos++;
+                nbFields-= 2;
+            }
 
         }
-        else if (i == 1) {
+        else if (index == 1) {
+            //Petit triangle en bas à gauche
+            xStartingPos = baseSize;
+            yStartingPos = (baseSize * 6) - (baseSize - 1) * 2; //This is good
+            double nbFields3 = (double) (baseSize * (baseSize)) /2;
 
+            while (xStartingPos <= baseSize * 4) {
+                for (int i = 0; i <= nbFields3; i+=2) {
+                    targetFields.add(new Field(xStartingPos, i + yStartingPos));
+                }
+                xStartingPos++;
+                yStartingPos++;
+                nbFields3-= 2;
+            }
         }
-        else if (i == 2) {
+        else if (index == 2) {
+            //Petit triangle en haut à gauche
+            xStartingPos = baseSize;
+            yStartingPos = (baseSize * 2) - 2; //This is good
+            double nbFields4 = (double) (baseSize * (baseSize)) /2;
 
+            while (xStartingPos < baseSize *2 ) {
+                for (int i = 0; i <= nbFields4; i+=2) {
+                    targetFields.add(new Field(xStartingPos, yStartingPos - i));
+                }
+                xStartingPos++;
+                yStartingPos--;
+                nbFields4-= 2;
+            }
         }
-        else if (i == 3) {
+        else if (index == 3) {
+            //Petit triangle en bas à droite
+            xStartingPos = baseSize * 3;
+            yStartingPos = (baseSize * 6) - (baseSize - 1) * 2;
+            double nbFields2 = (double) (baseSize * (baseSize)) /2;
 
+            while (xStartingPos >= 0) {
+                for (int i = 0; i <= nbFields2; i+=2) {
+                    targetFields.add(new Field(xStartingPos, i + yStartingPos));
+                }
+                xStartingPos--;
+                yStartingPos++;
+                nbFields2-= 2;
+            }
         }
-        else if (i == 4) {
+        else if (index == 4) {
+            xStartingPos = baseSize * 3;
+            yStartingPos = (baseSize * 2) - 2; //This is good
+            double nbFields5 = (double) (baseSize * (baseSize)) /2;
 
+            while (xStartingPos > baseSize *2 ) {
+                for (int i = 0; i <= nbFields5; i+=2) {
+                    targetFields.add(new Field(xStartingPos, yStartingPos - i));
+                }
+                xStartingPos--;
+                yStartingPos--;
+                nbFields5-= 2;
+            }
         }
-        else if (i == 5) {
+        else if (index == 5) {
+            //Case home fields à gauche
+            xStartingPos = baseSize * 3;
+            yStartingPos = 0;
+            nbFields = (6 * baseSize) + 1;
 
+            while (xStartingPos >= 0) {
+                for (int i = 0; i <= nbFields; i+=2) {
+                    //Case home fields à gauche
+                    if (xStartingPos - baseSize < 0) {
+                        targetFields.add(new Field(xStartingPos, i + yStartingPos));
+                    }
+                }
+                xStartingPos--;
+                yStartingPos++;
+                nbFields-= 2;
+            }
         }
-        return Set.of();
+        return Collections.unmodifiableSet(targetFields);
     }
 
     @Override
